--- a/client/selectaxisbar.ui
+++ b/client/selectaxisbar.ui
@@ -34,7 +34,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>73</height>
+       <height>55</height>
       </size>
      </property>
     </spacer>
@@ -42,14 +42,14 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_">
      <property name="spacing">
-      <number>12</number>
+      <number>20</number>
      </property>
      <item>
       <widget class="ltp::base::ClickDelayCheckButton" name="axisButton1_">
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -61,7 +61,6 @@
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
 QPushButton:checked{background:#0064C8;color:white;}
-QPushButton:hover{background:#0064C8;color:white;}
 
 
 </string>
@@ -79,7 +78,7 @@ QPushButton:hover{background:#0064C8;color:white;}
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -90,11 +89,7 @@ QPushButton:hover{background:#0064C8;color:white;}
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
-QPushButton:checked{background:#0064C8; color:white;}
-QPushButton:hover{background:#0064C8; color:white;}
-
-
-</string>
+QPushButton:checked{background:#0064C8;color:white;}</string>
        </property>
        <property name="text">
         <string/>
@@ -109,7 +104,7 @@ QPushButton:hover{background:#0064C8; color:white;}
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -120,11 +115,7 @@ QPushButton:hover{background:#0064C8; color:white;}
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
-QPushButton:checked{background:#0064C8; color:white;}
-QPushButton:hover{background:#0064C8; color:white;}
-
-
-</string>
+QPushButton:checked{background:#0064C8;color:white;}</string>
        </property>
        <property name="text">
         <string/>
@@ -139,7 +130,7 @@ QPushButton:hover{background:#0064C8; color:white;}
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -150,8 +141,7 @@ QPushButton:hover{background:#0064C8; color:white;}
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
-QPushButton:checked{background:#0064C8; color:white;}
-QPushButton:hover{background:#0064C8; color:white;}</string>
+QPushButton:checked{background:#0064C8;color:white;}</string>
        </property>
        <property name="text">
         <string/>
@@ -166,7 +156,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -183,8 +173,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
-QPushButton:checked{background:#0064C8; color:white;}
-QPushButton:hover{background:#0064C8; color:white;}</string>
+QPushButton:checked{background:#0064C8;color:white;}</string>
        </property>
        <property name="text">
         <string/>
@@ -199,7 +188,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>50</height>
+         <height>52</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -210,8 +199,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{background:transparent;border:0px;font:22px Arial;}
-QPushButton:checked{background:#0064C8; color:white;}
-QPushButton:hover{background:#0064C8; color:white;}</string>
+QPushButton:checked{background:#0064C8;color:white;}</string>
        </property>
        <property name="text">
         <string/>
@@ -238,6 +226,27 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
    </item>
    <item>
     <widget class="Line" name="line_">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>1</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>1</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>1</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QFrame{border:none;background:#D2D2D2;}</string>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -252,7 +261,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 12px Arial Bold;color:#0064C8</string>
+      <string notr="true">font: 12px Arial Bold;color:#0064C8;background:transparent;</string>
      </property>
      <property name="text">
       <string>手轮</string>
@@ -271,7 +280,7 @@ QPushButton:hover{background:#0064C8; color:white;}</string>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">font:12px Arial Bold;color:#0064C8</string>
+      <string notr="true">font:12px Arial Bold;color:#0064C8;background:transparent;</string>
      </property>
      <property name="text">
       <string>100%</string>
