1.增加G114 G00 G01示教示意图 2.支持切换刀尖坐标示教 3.增加示教坐标获取 4.完善直线指令示教

--- a/client/ltpclient.qrc
+++ b/client/ltpclient.qrc
@@ -35,5 +35,10 @@
         <file>image/folder.png</file>
         <file>image/to_previous.png</file>
         <file>image/to_previous_disabled.png</file>
+        <file>image/teach_command_g114_P1.png</file>
+        <file>image/teach_command_g114_P2.png</file>
+        <file>image/teach_command_g114_P3.png</file>
+        <file>image/teach_command_g00.png</file>
+        <file>image/teach_command_g01.png</file>
     </qresource>
 </RCC>
