--- a/base/plusminuswidget.ui
+++ b/base/plusminuswidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>142</width>
-    <height>63</height>
+    <width>120</width>
+    <height>40</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -34,11 +34,20 @@
   <property name="styleSheet">
    <string notr="true">background:#E6E6E6;</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_2">
+  <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,1,1,0,0">
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>15</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>15</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -74,25 +83,31 @@ QPushButton:pressed{background:transparent; border-image:url(:/LtpClient/image/s
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="valueLabel_">
-     <property name="minimumSize">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
       <size>
-       <width>30</width>
+       <width>40</width>
        <height>20</height>
       </size>
      </property>
-     <property name="maximumSize">
-      <size>
-       <width>30</width>
-       <height>16777215</height>
-      </size>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="valueLabel_">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
      <property name="styleSheet">
-      <string notr="true">font:Bold 18px Arial-BoldMT;
-background:transparent;</string>
+      <string notr="true">font:Bold 18px Arial-BoldMT;text-align: right;background:transparent;border:none;</string>
      </property>
      <property name="text">
-      <string>100</string>
+      <string>0</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -101,25 +116,32 @@ background:transparent;</string>
    </item>
    <item>
     <widget class="QLabel" name="label">
-     <property name="minimumSize">
-      <size>
-       <width>10</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>10</width>
-       <height>16777215</height>
-      </size>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
      <property name="styleSheet">
-      <string notr="true">font:10px Arial; background:transparent;</string>
+      <string notr="true">font:10px Arial; background:transparent;border:none;</string>
      </property>
      <property name="text">
       <string>%</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item>
     <widget class="QPushButton" name="plus_">
