--- a/base/filemanager.ui
+++ b/base/filemanager.ui
@@ -80,9 +80,9 @@
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">QPushButton{border:none;background-image:url(:/LtpClient/image/to_previous.png);background-color:#F5F5F5;}
-QPushButton:!enabled{border:none;background-image:url(:/LtpClient/image/to_previous_disabled.png);background-color:#F5F5F5;}
-QPushButton:pressed{border:none;background-image:url(:/LtpClient/image/to_previous.png);background-color:#E1EBFF;}</string>
+         <string notr="true">QPushButton{border:1px solid #D2D2D2;border-radius:2px;background-image:url(:/LtpClient/image/to_previous.png);background-color:#F5F5F5;background-position:center;}
+QPushButton:!enabled{background-image:url(:/LtpClient/image/to_previous_disabled.png);background-color:#F5F5F5;}
+QPushButton:pressed{background-image:url(:/LtpClient/image/to_previous.png);background-color:#E1EBFF;}</string>
         </property>
         <property name="text">
          <string/>
