--- a/client/operationpanel.ui
+++ b/client/operationpanel.ui
@@ -98,7 +98,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QFrame" name="frame_2">
+         <widget class="ltp::base::PanelButton" name="wAxis_">
           <property name="minimumSize">
            <size>
             <width>52</width>
@@ -111,14 +111,8 @@
             <height>46</height>
            </size>
           </property>
-          <property name="styleSheet">
-           <string notr="true">border:none;</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
+          <property name="text">
+           <string/>
           </property>
          </widget>
         </item>
